# code

./: .gitignore
haskell/first/: first.cabal  stack.yaml
haskell/first/.stack-work/install/x86_64-linux-nopie/lts-11.0/8.2.2/flag-cache/: Cabal-2.0.1.1-ARIl7MGNKZFBAH1HVzpC6s  aeson-1.2.4.0-8ECTd2IyJyU4MxyHUgPKI9  asn1-encoding-0.9.5-2ICF8dfb7uM5jgVSSSaWpD  asn1-parse-0.9.4-8PKB25jEtIxJlcJFNgQeku  asn1-types-0.3.2-BtN453OdbksLeiNs6aKDnJ  async-2.1.1.1-K429Y4XjamzDpSomhW85Gx  attoparsec-0.13.2.2-LdMM8sClLoBJOTRqecqD19  base-compat-0.9.3-915GC5pH10BBmcMnCvMsPA  base64-bytestring-1.0.0.1-8MlzMz2YH3lCqJ4GOwL1Be  basement-0.0.7-IRcTCDmYoctGxt4FUYqdQc  blaze-builder-0.4.0.2-lVErdDjTklBECglQVHluX  bson-0.3.2.3-25410dWh4YGGk5uRNaQqaX  byteable-0.1.1-4PLPgH6a2E14oN7yL5y3oL  case-insensitive-1.2.0.10-2B28zDqM3e2D6uUaMQqXka  cereal-0.5.5.0-LlCRTX2XyPnC6qdZ6C2b02  conduit-1.3.0-GVr3fUyKcjlKxWrTrlMIDk  conduit-extra-1.3.0-ENTreHoUc6x2ncMG31MSPS  connection-0.2.8-B32FRlk1BV48fTYh4XZejJ  cookie-0.4.4-IH6paS8rvPqCsK3tedBbTe  cryptohash-0.11.9-BY4JKly1wxP2CqIOUXppDu  cryptonite-0.25-62KWfqjG1f38Ag9mk6p5ih  currencies-0.1.1.1-IYRESh9PUebIezC5OlPnmj  currency-0.2.0.0-9fnH0QaAO8J8Y7voueVuvf  currency-codes-3.0.0.0-2sgYqOksMyS9fYb0zzyWC3  data-binary-ieee754-0.4.4-F3YRhJd3kvlDf64vOl9RIA  data-default-class-0.1.2.0-8hmGYd6GPAfLQPQcWKOjRm  dates-0.2.2.1-D7hvMtKhJYVDEiV9c9iFGV  dlist-0.8.0.4-C5jxmU4NyxKI1pN7pAcXnu  exceptions-0.8.3-CYMTujxEbkkJnOJ7pW82ZD  first-0.1.0.0  first-0.1.0.0-FwY9U5f5EKT90rDPf2RQZu  first-0.1.0.0-JfQTCrO2UydHCuLZnHRTr8  (+43 more)
haskell/first/src/: Main.hs  Timestuff.hs
(+91 files in other folders)
