name:                first
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/first#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable first
  other-modules: Timestuff
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                        time,
                        currency,
                        currency-codes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/first
